policies/standard/pod_container_repos/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodContainerReposPolicy
metadata:
  name: k8spodcontainerrepospolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
  parameters:
    repos: [
      "ALLOWED_REPOSITORY"
    ]
